--- a/clase_04_06/src/App.css
+++ b/clase_04_06/src/App.css
@@ -40,3 +40,14 @@
 .read-the-docs {
   color: #888;
 }
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+}
+
+#root {
+  padding-left: 40px; 
+  padding-top: 20px;
+}
